--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -457,3 +457,14 @@ footer .footer-below {
     display: none;
     opacity: 0;
 }
+.img-profile {
+    border: 5px solid #FFF;
+    width: 100px;
+    height: 100px;
+    border-radius: 55px;
+    -webkit-border-radius: 55px;
+    -moz-border-radius: 55px;
+    -webkit-box-shadow: 0 0 3px 0 rgba(0,0,0,0.8);
+    -moz-box-shadow: 0 0 3px 0 rgba(0,0,0,0.8);
+    box-shadow: 0 0 3px 0 rgba(0,0,0,0.8);
+}
