--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -468,3 +468,41 @@ footer .footer-below {
     -moz-box-shadow: 0 0 3px 0 rgba(0,0,0,0.8);
     box-shadow: 0 0 3px 0 rgba(0,0,0,0.8);
 }
+.navbar-default, .navbar-inverse {
+    border: 0px none;
+    background-color: #E47969;
+}
+header {
+    text-align: center;
+    color: #FFF;
+    background: #E9E6DE none repeat scroll 0% 0%;
+	color: #A73DAE;
+}
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+    color: #A73DAE;
+    background-color: transparent;
+}
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #A73DAE;
+    background-color: transparent;
+}
+.navbar-fixed-top {
+    padding: 2px 0px;
+    transition: padding 0.3s ease 0s;
+}
+footer .footer-above {
+    padding-top: 50px;
+    background-color: #7B516C;
+}
+footer .footer-below {
+    padding: 25px 0px;
+    background-color: #412537;
+}
+section.success {
+    color: #FFF;
+    background: #C85073 none repeat scroll 0% 0%;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #FFF;
+    background-color: #A45145;
+}
